# bracketed-elicitation-policy

./: README.md  pyproject.toml
src/bracketed_elicitation_policy/: __init__.py  policy.py  protocol.py
tests/: test_policy.py  test_protocol.py
